gccida/c0/push_reload
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1363:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class valid_class; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1437:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v108; // [rsp+BCh] [rbp-1A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1438:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v109; // [rsp+C4h] [rbp-19Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1452:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v123; // [rsp+124h] [rbp-13Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1453:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v124; // [rsp+128h] [rbp-138h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1454:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v125; // [rsp+12Ch] [rbp-134h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1455:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v126; // [rsp+130h] [rbp-130h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1456:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v127; // [rsp+134h] [rbp-12Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1457:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v128; // [rsp+138h] [rbp-128h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode rel_mode; // [rsp+1B8h] [rbp-A8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1475:4: error: expected ';' after expression
rtx note; // [rsp+1C0h] [rbp-A0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1475:5: error: use of undeclared identifier 'note'; did you mean 'none'?
rtx note; // [rsp+1C0h] [rbp-A0h] 
    ^~~~
    none
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/expr.h:119:17: note: 'none' declared here
enum direction {none, upward, downward};  /* Value has this type.  */
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1480:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+1E8h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1481:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class in_class; // [rsp+1ECh] [rbp-74h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/reload.c:1484:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code secondary_out_icode; // [rsp+1F8h] [rbp-68h] BYREF 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/push_reload/src/obj/reload.o] Error 1
